--- a/Social Media Website/index.html
+++ b/Social Media Website/index.html
@@ -13,7 +13,9 @@
 <body>
     <nav>
         <div class="nav-left">
-            <img src="images/logo.png" class="logo">
+            <a href="index.html">
+                <img src="images/logo.png" class="logo">
+            </a>
             <ul>
                 <li><img src="images/notification.png" ></li>               
                 <li><img src="images/inbox.png" ></li>               
@@ -31,7 +33,7 @@
             </div>
         </div>
 
-        <!-- settings-menu -->
+        <!-- dropdown-settings-menu -->
 
         <div class="settings-menu">
 
@@ -44,7 +46,7 @@
                     <img src="images/profile-pic.png">
                     <div>
                         <p>Klaus Michaelson</p>
-                        <a href="#">See your profile</a>
+                        <a href="profile.html">See your profile</a>
                     </div>
                 </div>
                 <hr>
