--- a/Amazon clone/javascript-amazon-project-main/amazon.html
+++ b/Amazon clone/javascript-amazon-project-main/amazon.html
@@ -56,7 +56,9 @@
         
       </div>
     </div>
+
+    <!-- script elements are loaded one by one. if it is reversed it will not work -->
+    <script src="data/products.js"></script>
     <script src="scripts/amazon.js"></script>
   </body>
 </html>
-
