--- a/Amazon clone/javascript-amazon-project-main/amazon.html
+++ b/Amazon clone/javascript-amazon-project-main/amazon.html
@@ -58,6 +58,7 @@
     </div>
 
     <!-- script elements are loaded one by one. if it is reversed it will not work -->
+    <script src="data/cart.js"></script>
     <script src="data/products.js"></script>
     <script src="scripts/amazon.js"></script>
   </body>
