--- a/Amazon clone/javascript-amazon-project-main/amazon.html
+++ b/Amazon clone/javascript-amazon-project-main/amazon.html
@@ -45,7 +45,8 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+<!-- update the cart quantity number in the top right corner. add another class name to it -->
+          <div class="cart-quantity js-cart-quantity">0</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
